Added div to every jsp page and improved html/css a bit.

--- a/web/WEB-INF/jspf/footer.jspf
+++ b/web/WEB-INF/jspf/footer.jspf
@@ -1,5 +1,5 @@
-<div id="footer">
-                footer
+   <div id="footer">
+                This website is group 14's CT338 project.
             </div>
         </div>
     </body>
