--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -10,5 +10,21 @@
     <body>
         <div id="main">
             <div id="header">
-                <h1>The Stationary Shop</h1><br><br>
+                <div id="login">
+                    <a href="login.jsp">
+                        <button>Login</button>
+                    </a>  
+                    <a href="Logout">
+                        <button>Logout</button>
+                    </a>
+                </div>
+
+                <h1>The Stationary Shop</h1>
+            </div>
+            <div id="indexLeftColumn">
+                <br>
+                <a href="register.jsp">Register</a><br>
+                <a href="Catalog">Catalog</a><br>
+                <a href="admin.jsp">Admin Page</a><br>
+                <a href="cart.jsp">View Cart</a><br>
             </div>
