--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -23,8 +23,8 @@
             </div>
             <div id="indexLeftColumn">
                 <br>
-                <a href="register.jsp">Register</a><br>
-                <a href="Catalog">Catalog</a><br>
-                <a href="admin.jsp">Admin Page</a><br>
-                <a href="cart.jsp">View Cart</a><br>
+                &nbsp; <a href="register.jsp">Register</a><br>
+                &nbsp; <a href="Catalog"> Catalog</a><br>
+                &nbsp; <a href="admin.jsp"> Admin Page</a><br>
+                &nbsp; <a href="cart.jsp"> View Cart</a><br>
             </div>
